<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".RegisterActivity">

    <ImageView
        android:id="@+id/Background"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scaleType="centerCrop"
        android:background="@drawable/grad_bg"
        android:contentDescription="@string/gradient_background" />

    <ScrollView
        android:id="@+id/scrollView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"

        android:layout_marginTop="0dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="25dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="25dp"
            android:orientation="vertical"
            >

            <ImageView
                android:id="@+id/UBLostLogo"
                android:layout_width="match_parent"
                android:layout_height="100dp"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="10dp"
                android:contentDescription="@string/ublost"
                android:scaleType="fitCenter"
                android:src="@drawable/ublost_logo3" />

            <TextView
                android:id="@+id/RegisterTextView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="20dp"
                android:paddingStart="10dp"
                android:paddingEnd="10dp"
                android:text="@string/register"
                android:textAlignment="center"
                android:textColor="@color/white"
                android:textSize="40sp"
                android:textStyle="bold" />

            <RelativeLayout
                android:layout_width="300dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:padding="5dp"
                android:layout_marginBottom="5dp"
                android:background="@drawable/color_spinner_layout">

                <Spinner
                    android:id="@+id/status_spinner"
                    style="@style/Widget.AppCompat.DropDownItem.Spinner"
                    android:layout_width="300dp"
                    android:layout_height="35dp"
                    android:layout_gravity="center"
                    android:entries="@array/status_array"
                    android:popupBackground="#FFF"
                    android:spinnerMode="dropdown" />
            </RelativeLayout>

            <AutoCompleteTextView
                android:id="@+id/email"
                android:layout_width="300dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginStart="15dp"
                android:layout_marginTop="15dp"
                android:layout_marginEnd="15dp"
                android:layout_marginBottom="15dp"
                android:backgroundTint="@color/white"
                android:hint="@string/email_address"
                android:inputType="textEmailAddress"
                android:maxLines="1"
                android:imeOptions="actionNext"
                android:paddingStart="7dp"
                android:paddingTop="10dp"
                android:paddingEnd="7dp"
                android:paddingBottom="25dp"
                android:textColor="@android:color/white"
                android:textColorHint="#BCFFFFFF" />

            <AutoCompleteTextView
                android:id="@+id/password"
                android:layout_width="300dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginStart="15dp"
                android:layout_marginTop="5dp"
                android:layout_marginEnd="15dp"
                android:layout_marginBottom="15dp"
                android:backgroundTint="@color/white"
                android:hint="@string/password"
                android:inputType="textPassword"
                android:maxLines="1"
                android:imeOptions="actionNext"
                android:paddingStart="7dp"
                android:paddingTop="10dp"
                android:paddingEnd="7dp"
                android:paddingBottom="25dp"
                android:textColor="@android:color/white"
                android:textColorHint="#BCFFFFFF" />

            <AutoCompleteTextView
                android:id="@+id/confirm_password"
                android:layout_width="300dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginStart="15dp"
                android:layout_marginTop="5dp"
                android:layout_marginEnd="15dp"
                android:layout_marginBottom="10dp"
                android:backgroundTint="@color/white"
                android:hint="@string/confirm_password"
                android:inputType="textPassword"
                android:maxLines="1"
                android:cursorVisible="true"
                android:imeOptions="actionDone"
                android:paddingStart="7dp"
                android:paddingTop="10dp"
                android:paddingEnd="7dp"
                android:paddingBottom="25dp"
                android:textColor="@android:color/white"
                android:textColorHint="#BCFFFFFF" />

            <RadioButton
                android:id="@+id/radioButton"
                android:layout_width="300dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:button="@drawable/radiobutton"
                android:paddingStart="5dp"
                android:text="@string/terms"
                android:textColor="@color/white"
                android:textSize="12sp" />

            <Button
                android:id="@+id/registerButton"
                android:layout_width="300dp"
                android:layout_height="50dp"
                android:layout_gravity="center"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="10dp"
                android:background="@drawable/login"
                android:paddingStart="7dp"
                android:paddingEnd="7dp"
                android:text="@string/register"
                android:textColor="@color/white"
                android:textStyle="normal"
                />

            <TextView
                android:id="@+id/helpTextView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="40dp"
                android:paddingStart="10dp"
                android:paddingEnd="10dp"
                android:autoLink="all"
                android:text="@string/back2login"
                android:textAlignment="center"
                android:textColor="@color/white"
                android:textSize="15sp" />

        </LinearLayout>

    </ScrollView>

</RelativeLayout>